fix text alignment

--- a/lab.css
+++ b/lab.css
@@ -14,6 +14,11 @@ body {
 
 p, h2, h3{
     margin: 10px 25px 10px 10px;
+    text-align: right;
+}
+
+footer h2, .info h3 {
+    text-align: left;
 }
 
 .content, aside {
@@ -36,7 +41,6 @@ header {
 
 header h2 {
     background-color: white;
-    text-align: right;
 }
 
 nav {
